# sca-ml

./: Makefile  README.md  analysis.py  evaluate.py  pyproject.toml  search.py  train.py
data/: README.md
datasets/: __init__.py  ascad_v1.py  base.py
models/: __init__.py  cnn.py  mlp.py
notebooks/: 01_introduction.py  02_analysis.py  03_models.py  04_evaluation.py
trial_configs/: ascad_v1_cnn.yaml  ascad_v1_desync50_cnn.yaml  ascad_v1_desync50_mlp.yaml  ascad_v1_mlp.yaml
