[project]
name = "sca-ml"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "optuna>=4.0.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.68.3",
]

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "-all"
